// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartHelpers should aggregated generated x,y axis props: default settings 1`] = `
{
  "xAxisProps": {
    "fixLabelOverlap": false,
    "label": undefined,
    "tickFormat": [Function],
    "tickValues": [],
  },
  "yAxisProps": [
    {
      "dependentAxis": true,
      "label": undefined,
      "orientation": "left",
      "showGrid": true,
      "style": {
        "axis": {},
        "tickLabels": {},
      },
      "tickFormat": [Function],
    },
  ],
}
`;

exports[`ChartHelpers should generate a max x, max y from datasets: max x, y 1`] = `
{
  "individualMaxY": {
    "dolor": 100,
    "ipsum": 100,
    "lorem": 10,
  },
  "maxX": 6,
  "maxY": 200,
}
`;

exports[`ChartHelpers should generate domain ranges: domain, maxY less than 0.1 1`] = `
{
  "domain": {
    "y": [
      0,
      0.0125,
    ],
  },
  "padding": {},
}
`;

exports[`ChartHelpers should generate domain ranges: domain, maxY number 1`] = `
{
  "domain": {
    "y": [
      0,
      300,
    ],
  },
  "padding": {},
}
`;

exports[`ChartHelpers should generate domain ranges: domain, maxY object 1`] = `
{
  "domain": {
    "y": [
      0,
      1.25,
    ],
  },
  "padding": {},
}
`;

exports[`ChartHelpers should generate element props: custom valueFormats 1`] = `
{
  "xValueNaN": 0,
  "xValueNull": null,
  "xValueNumber": 0,
  "xValueString": "lorem",
  "xValueUndefined": 0,
  "yValueNaN": 0,
  "yValueNull": null,
  "yValueNumber": 0,
  "yValueString": "ipsum",
  "yValueUndefined": 0,
}
`;

exports[`ChartHelpers should generate element props: props 1`] = `
{
  "elements": [
    {
      "chartType": undefined,
      "props": {
        "data": [
          {
            "x": 0,
            "y": 10,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 10,
          },
          {
            "x": 3,
            "y": 10,
          },
          {
            "x": 4,
            "y": 10,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "key": "chart-lorem-",
        "name": "chart-lorem-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
  ],
  "elementsById": {
    "lorem": {
      "chartType": undefined,
      "props": {
        "data": [
          {
            "x": 0,
            "y": 10,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 10,
          },
          {
            "x": 3,
            "y": 10,
          },
          {
            "x": 4,
            "y": 10,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "key": "chart-lorem-",
        "name": "chart-lorem-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
  },
  "stackedElements": [
    {
      "chartType": undefined,
      "props": {
        "data": [
          {
            "x": 0,
            "y": 20,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 30,
          },
          {
            "x": 3,
            "y": 50,
          },
          {
            "x": 4,
            "y": 100,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "key": "chart-ipsum-",
        "name": "chart-ipsum-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
    {
      "chartType": undefined,
      "props": {
        "animate": true,
        "data": [
          {
            "x": 0,
            "y": 20,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 30,
          },
          {
            "x": 3,
            "y": 50,
          },
          {
            "x": 4,
            "y": 100,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "interpolation": "lorem ipsum interpolation",
        "key": "chart-dolor-",
        "name": "chart-dolor-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
  ],
  "stackedElementsById": {
    "dolor": {
      "chartType": undefined,
      "props": {
        "animate": true,
        "data": [
          {
            "x": 0,
            "y": 20,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 30,
          },
          {
            "x": 3,
            "y": 50,
          },
          {
            "x": 4,
            "y": 100,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "interpolation": "lorem ipsum interpolation",
        "key": "chart-dolor-",
        "name": "chart-dolor-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
    "ipsum": {
      "chartType": undefined,
      "props": {
        "data": [
          {
            "x": 0,
            "y": 20,
          },
          {
            "x": 1,
            "y": 10,
          },
          {
            "x": 2,
            "y": 30,
          },
          {
            "x": 3,
            "y": 50,
          },
          {
            "x": 4,
            "y": 100,
          },
          {
            "x": 5,
            "y": 10,
          },
        ],
        "key": "chart-ipsum-",
        "name": "chart-ipsum-",
        "style": {
          "data": {},
        },
        "themeColor": undefined,
        "themeVariant": undefined,
        "x": undefined,
        "y": [Function],
      },
    },
  },
}
`;

exports[`ChartHelpers should generate tooltip data/content: tooltip, content 1`] = `
[
  [
    {
      "datum": {
        "index": 0,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 0,
              "y": 20,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 0,
              "y": 20,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 0,
              "y": 10,
            },
          },
        },
        "x": 0,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 1,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 1,
              "y": 10,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 1,
              "y": 10,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 1,
              "y": 10,
            },
          },
        },
        "x": 1,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 2,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 2,
              "y": 30,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 2,
              "y": 30,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 2,
              "y": 10,
            },
          },
        },
        "x": 2,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 3,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 3,
              "y": 50,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 3,
              "y": 50,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 3,
              "y": 10,
            },
          },
        },
        "x": 3,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 4,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 4,
              "y": 100,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 4,
              "y": 100,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 4,
              "y": 10,
            },
          },
        },
        "x": 4,
        "y": 10,
      },
    },
  ],
  [
    {
      "datum": {
        "index": 5,
        "itemsByKey": {
          "dolor": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 5,
              "y": 10,
            },
          },
          "ipsum": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 5,
              "y": 10,
            },
          },
          "lorem": {
            "chartType": undefined,
            "color": "",
            "data": {
              "x": 5,
              "y": 10,
            },
          },
        },
        "x": 5,
        "y": 10,
      },
    },
  ],
]
`;

exports[`ChartHelpers should generate tooltip data/content: tooltip, settings 1`] = `
{
  "0": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 0,
          "y": 20,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 0,
          "y": 20,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 0,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 0,
    "y": null,
  },
  "1": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 1,
          "y": 10,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 1,
          "y": 10,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 1,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 1,
    "y": null,
  },
  "2": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 2,
          "y": 30,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 2,
          "y": 30,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 2,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 2,
    "y": null,
  },
  "3": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 3,
          "y": 50,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 3,
          "y": 50,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 3,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 3,
    "y": null,
  },
  "4": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 4,
          "y": 100,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 4,
          "y": 100,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 4,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 4,
    "y": null,
  },
  "5": {
    "itemsByKey": {
      "dolor": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 5,
          "y": 10,
        },
      },
      "ipsum": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 5,
          "y": 10,
        },
      },
      "lorem": {
        "chartType": undefined,
        "color": "",
        "data": {
          "x": 5,
          "y": 10,
        },
      },
    },
    "tooltip": undefined,
    "x": 5,
    "y": null,
  },
}
`;

exports[`ChartHelpers should generate x axis props: format callback 1`] = `
[
  [
    {
      "item": {
        "date": "2023-02-12T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 0,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-13T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 1,
        "y": 0,
      },
      "previousItem": {},
      "tick": 0,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-13T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 1,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-14T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 2,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-12T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 0,
        "y": 0,
      },
      "tick": 1,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-14T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 2,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-15T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 3,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-13T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 1,
        "y": 0,
      },
      "tick": 2,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-15T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 3,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-16T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 4,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-14T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 2,
        "y": 0,
      },
      "tick": 3,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-16T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 4,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-17T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 5,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-15T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 3,
        "y": 0,
      },
      "tick": 4,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-17T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 5,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-18T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 6,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-16T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 4,
        "y": 0,
      },
      "tick": 5,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-18T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 6,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-19T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 7,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-17T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 5,
        "y": 0,
      },
      "tick": 6,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-19T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 7,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-20T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 8,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-18T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 6,
        "y": 0,
      },
      "tick": 7,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-20T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 8,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-21T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 9,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-19T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 7,
        "y": 0,
      },
      "tick": 8,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-21T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 9,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-22T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 10,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-20T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 8,
        "y": 0,
      },
      "tick": 9,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-22T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 10,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-23T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 11,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-21T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 9,
        "y": 0,
      },
      "tick": 10,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-23T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 11,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-24T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 12,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-22T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 10,
        "y": 0,
      },
      "tick": 11,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-24T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 12,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-25T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 13,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-23T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 11,
        "y": 0,
      },
      "tick": 12,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-25T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 13,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-26T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 14,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-24T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 12,
        "y": 0,
      },
      "tick": 13,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-26T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 14,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-27T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 15,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-25T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 13,
        "y": 0,
      },
      "tick": 14,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-27T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 15,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-02-28T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 16,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-26T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 14,
        "y": 0,
      },
      "tick": 15,
    },
  ],
  [
    {
      "item": {
        "date": "2023-02-28T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 16,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-01T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 17,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-27T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 15,
        "y": 0,
      },
      "tick": 16,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-01T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 17,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-02T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 18,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-02-28T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 16,
        "y": 0,
      },
      "tick": 17,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-02T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 18,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-03T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 19,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-03-01T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 17,
        "y": 0,
      },
      "tick": 18,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-03T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 19,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-04T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 20,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-03-02T00:00:00.000Z",
        "hasData": false,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 18,
        "y": 0,
      },
      "tick": 19,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-04T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 20,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-05T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 21,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-03-03T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 19,
        "y": 0,
      },
      "tick": 20,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-05T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 21,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-06T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 22,
        "y": 1,
      },
      "previousItem": {
        "date": "2023-03-04T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 20,
        "y": 0,
      },
      "tick": 21,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-06T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 22,
        "y": 1,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-07T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 23,
        "y": 1,
      },
      "previousItem": {
        "date": "2023-03-05T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 21,
        "y": 0,
      },
      "tick": 22,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-07T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 23,
        "y": 1,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-08T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 24,
        "y": 1,
      },
      "previousItem": {
        "date": "2023-03-06T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 22,
        "y": 1,
      },
      "tick": 23,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-08T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 24,
        "y": 1,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-09T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 25,
        "y": 1,
      },
      "previousItem": {
        "date": "2023-03-07T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 23,
        "y": 1,
      },
      "tick": 24,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-09T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 25,
        "y": 1,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-10T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 26,
        "y": 1,
      },
      "previousItem": {
        "date": "2023-03-08T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 24,
        "y": 1,
      },
      "tick": 25,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-10T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 26,
        "y": 1,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-11T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 27,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-03-09T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 25,
        "y": 1,
      },
      "tick": 26,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-11T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 27,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-12T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 28,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-03-10T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 26,
        "y": 1,
      },
      "tick": 27,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-12T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 28,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-13T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 29,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-03-11T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 27,
        "y": 0,
      },
      "tick": 28,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-13T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 29,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {
        "date": "2023-03-14T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": true,
        "isFutureDate": false,
        "x": 30,
        "y": 0,
      },
      "previousItem": {
        "date": "2023-03-12T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 28,
        "y": 0,
      },
      "tick": 29,
    },
  ],
  [
    {
      "item": {
        "date": "2023-03-14T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": true,
        "isFutureDate": false,
        "x": 30,
        "y": 0,
      },
      "maxX": 6,
      "nextItem": {},
      "previousItem": {
        "date": "2023-03-13T00:00:00.000Z",
        "hasData": true,
        "isCurrentDate": false,
        "isFutureDate": false,
        "x": 29,
        "y": 0,
      },
      "tick": 30,
    },
  ],
]
`;

exports[`ChartHelpers should generate x axis props: props 1`] = `
{
  "label": undefined,
  "tickFormat": [Function],
  "tickValues": [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
  ],
}
`;

exports[`ChartHelpers should generate y axis props: format callback, 0, left axis 1`] = `
[
  {
    "isMultiAxis": true,
    "maxY": 10,
    "tick": 10,
  },
]
`;

exports[`ChartHelpers should generate y axis props: format callback, 1, right axis 1`] = `
[
  {
    "isMultiAxis": true,
    "maxY": 100,
    "tick": 100,
  },
]
`;

exports[`ChartHelpers should generate y axis props: props 1`] = `
[
  {
    "label": undefined,
    "orientation": "left",
    "style": {
      "axis": {},
      "tickLabels": {},
    },
    "tickFormat": [Function],
  },
  {
    "label": undefined,
    "orientation": "right",
    "style": {
      "axis": {
        "stroke": "lorem ipsum stroke",
        "strokeWidth": 2,
      },
      "tickLabels": {},
    },
    "tickFormat": [Function],
  },
]
`;

exports[`ChartHelpers should return specific properties: specific properties 1`] = `
{
  "ChartTypeVariant": {
    "area": "area",
    "line": "line",
    "threshold": "threshold",
  },
  "generateAxisProps": [Function],
  "generateDomains": [Function],
  "generateElementsProps": [Function],
  "generateMaxXY": [Function],
  "generateTooltipData": [Function],
  "generateXAxisProps": [Function],
  "generateYAxisProps": [Function],
}
`;
